--- a/todo-app/todo-server/package.json
+++ b/todo-app/todo-server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.7",
+    "pm2": "^4.5.6"
   }
 }
